Update to java 21 and code cleanup