@@ -9,6 +9,7 @@ import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.events.interaction.command.MessageContextInteractionEvent;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.events.interaction.command.UserContextInteractionEvent;
+import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 import net.dv8tion.jda.api.utils.FileUpload;
@@ -22,7 +23,8 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -66,15 +68,16 @@ public class DeepfryCommand extends CoreCommand {
 
     @Override
     protected void runSlash(SlashCommandInteractionEvent event) {
-        String url = event.getOption("image").getAsString();
+        String url = event.getOption("image", "how tf did you manage this?", OptionMapping::getAsString);
         event.deferReply().queue();
 
         try {
             BufferedImage deepfried = deepfry(url);
             FileUpload upload = FileUpload.fromData(toInputStream(deepfried), "deepfried.png");
             event.getHook().editOriginal("🔥 Deepfried Image 🔥").setFiles(upload).mentionRepliedUser(false).queue();
-        } catch(IOException exception) {
+        } catch(IOException | URISyntaxException exception) {
             event.getHook().editOriginal("❌ Failed to deepfry image!").mentionRepliedUser(false).queue();
+            Constants.LOGGER.error("Failed to deepfry image", exception);
         }
     }
 
@@ -86,20 +89,26 @@ public class DeepfryCommand extends CoreCommand {
             return;
         }
 
-        Message.Attachment attachment = message.getAttachments().stream().filter(Message.Attachment::isImage).findFirst().orElse(null);
-        if(attachment == null) {
-            event.reply("❌ You must provide an image to deepfry!").mentionRepliedUser(false).queue();
-            return;
-        }
+        try(Message.Attachment attachment = message.getAttachments()
+                .stream()
+                .filter(Message.Attachment::isImage)
+                .findFirst()
+                .orElse(null)) {
+            if (attachment == null) {
+                event.reply("❌ You must provide an image to deepfry!").mentionRepliedUser(false).queue();
+                return;
+            }
 
-        event.deferReply().queue();
+            event.deferReply().queue();
 
-        try {
-            BufferedImage deepfried = deepfry(attachment.getUrl());
-            FileUpload upload = FileUpload.fromData(toInputStream(deepfried), "deepfried.png");
-            event.getHook().editOriginal("🔥 Deepfried Image 🔥").setFiles(upload).mentionRepliedUser(false).queue();
-        } catch(IOException exception) {
-            event.getHook().editOriginal("❌ Failed to deepfry image!").mentionRepliedUser(false).queue();
+            try {
+                BufferedImage deepfried = deepfry(attachment.getUrl());
+                FileUpload upload = FileUpload.fromData(toInputStream(deepfried), "deepfried.png");
+                event.getHook().editOriginal("🔥 Deepfried Image 🔥").setFiles(upload).mentionRepliedUser(false).queue();
+            } catch (IOException | URISyntaxException exception) {
+                event.getHook().editOriginal("❌ Failed to deepfry image!").mentionRepliedUser(false).queue();
+                Constants.LOGGER.error("Failed to deepfry image", exception);
+            }
         }
     }
 
@@ -114,15 +123,15 @@ public class DeepfryCommand extends CoreCommand {
             BufferedImage deepfried = deepfry(url);
             FileUpload upload = FileUpload.fromData(toInputStream(deepfried), "deepfried.png");
             event.getHook().editOriginal("🔥 Deepfried Image 🔥").setFiles(upload).mentionRepliedUser(false).queue();
-        } catch(IOException exception) {
-            exception.printStackTrace();
+        } catch(IOException | URISyntaxException exception) {
+            Constants.LOGGER.error("Failed to deepfry image", exception);
             event.getHook().editOriginal("❌ Failed to deepfry image!").mentionRepliedUser(false).queue();
         }
     }
 
-    private static BufferedImage deepfry(String url) throws IOException {
+    private static BufferedImage deepfry(String url) throws IOException, URISyntaxException {
         String reqUrl = "https://nekobot.xyz/api/imagegen?type=deepfry&image=%s".formatted(url);
-        InputStream stream = new URL(reqUrl).openStream();
+        InputStream stream = new URI(reqUrl).toURL().openStream();
         JsonObject json = Constants.GSON.fromJson(IOUtils.toString(stream, StandardCharsets.UTF_8), JsonObject.class);
         String message = json.has("message") ? json.get("message").getAsString() : null;
         if(message == null) {
@@ -130,7 +139,7 @@ public class DeepfryCommand extends CoreCommand {
             throw new IOException("No message present");
         }
 
-        return ImageIO.read(new URL(json.get("message").getAsString()));
+        return ImageIO.read(new URI(json.get("message").getAsString()).toURL());
     }
 
     private static InputStream toInputStream(final RenderedImage image) throws IOException {
