@@ -1,18 +1,18 @@
 package dev.darealturtywurty.superturtybot.commands.util;
 
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.URL;
-import java.net.URLConnection;
-import java.util.concurrent.TimeUnit;
-
 import com.google.gson.JsonObject;
-
 import dev.darealturtywurty.superturtybot.core.command.CommandCategory;
 import dev.darealturtywurty.superturtybot.core.command.CoreCommand;
 import dev.darealturtywurty.superturtybot.core.util.Constants;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import org.apache.commons.lang3.tuple.Pair;
+
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URLConnection;
+import java.util.concurrent.TimeUnit;
 
 public class FactCommand extends CoreCommand {
     private static final String ENDPOINT = "https://api.popcat.xyz/fact";
@@ -51,7 +51,7 @@ public class FactCommand extends CoreCommand {
         event.deferReply().queue();
 
         try {
-            final URLConnection connection = new URL(ENDPOINT).openConnection();
+            final URLConnection connection = new URI(ENDPOINT).toURL().openConnection();
             final JsonObject json = Constants.GSON.fromJson(new InputStreamReader(connection.getInputStream()),
                 JsonObject.class);
             if (json.has("error")) {
@@ -62,9 +62,9 @@ public class FactCommand extends CoreCommand {
             
             final String fact = json.get("fact").getAsString();
             event.getHook().sendMessage(fact).queue();
-        } catch (final IOException exception) {
+        } catch (final IOException | URISyntaxException exception) {
             event.getHook().sendMessage("❌ Failed to get fact!").queue();
-            exception.printStackTrace();
+            Constants.LOGGER.error("Failed to get fact!", exception);
         }
     }
 }
